#
# Copyright (c) 2016 Nicholas Corgan (n.corgan@gmail.com)
#
# Distributed under the MIT License (MIT) (See accompanying file LICENSE.txt
# or copy at http://opensource.org/licenses/MIT)
#

IF(PKMN_ENABLE_QT)
    CMAKE_POLICY(SET CMP0020 NEW)
ENDIF(PKMN_ENABLE_QT)

INCLUDE(PKMNUnitTest)

# Find dependencies and set subcomponents
FIND_PACKAGE(GTest)
IF(GTEST_FOUND)
    PKMN_APPEND_SUBCOMPONENT("C++ Tests")
ENDIF(GTEST_FOUND)

IF(PKMN_ENABLE_C)
    PKMN_APPEND_SUBCOMPONENT("C Tests")
ENDIF(PKMN_ENABLE_C)

IF(PKMN_ENABLE_CSHARP)
    FIND_PACKAGE(NUnit)
    PKMN_APPEND_SUBCOMPONENT("C# Tests")
ENDIF(PKMN_ENABLE_CSHARP)

ADD_SUBDIRECTORY(pkmntest)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/pkmntest/include
)

#
# C++ tests
#
IF(GTEST_FOUND)
    ADD_SUBDIRECTORY(cpp)
ENDIF(GTEST_FOUND)

#
# C tests
#
IF(PKMN_ENABLE_C)
    ADD_SUBDIRECTORY(c)
ENDIF(PKMN_ENABLE_C)

#
# C# tests
#
IF(PKMN_ENABLE_CSHARP)
    ADD_SUBDIRECTORY(csharp)
ENDIF(PKMN_ENABLE_CSHARP)

#
# Lua tests
#
IF(PKMN_ENABLE_LUA)
    ADD_SUBDIRECTORY(lua)
ENDIF(PKMN_ENABLE_LUA)

#
# Python tests
#
IF(PKMN_ENABLE_PYTHON)
    ADD_SUBDIRECTORY(python)
ENDIF(PKMN_ENABLE_PYTHON)
